[package]
name = "eco_print"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eco_print"
crate-type = ["cdylib", "lib"]

[dependencies]
rusb = { version = "0.9.3", optional = true }
futures-lite = { version = "1.13.0", default-features = false, optional = true }
image = { version = "0.24.7", optional = true }
btleplug = { version = "0.11.5", optional = true }

tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["ble"]
ble = ["btleplug", "futures-lite"]
img = ["image"]
usb = ["rusb"]
android = []
ios = []
 