[package]
name = "eco_print"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eco_print"
crate-type = ["cdylib", "lib"]

[dependencies]
rusb = { version = "0.9.3", optional = true }
futures-lite = { version = "1.13.0", default-features = false, optional = true }
btleplug = { version = "0.11.5", optional = true }
log = { version = "0.4.22", optional = true }

qrcode = "0.14.1"
image = { version = "0.24.7" }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }


[features]
default = ["ble"]
ble = ["btleplug", "futures-lite"]
usb = ["rusb"]
android = []
ios = []
debug = ["log"]

[[example]]
name = "ble"
path = "examples/ble.rs"
required-features = ["ble"]

[[example]]
name = "escpos_ble"
path = "examples/escpos_ble.rs"
required-features = ["ble"]

[[example]]
name = "usb"
path = "examples/usb.rs"
required-features = ["usb"]

[[example]]
name = "escpos_usb"
path = "examples/escpos_usb.rs"
required-features = ["rusb"]
