[package]
name = "eco_print"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eco_print"
crate-type = ["cdylib", "lib"]

[dependencies]
rusb = { version = "0.9.3", optional = true }
futures-lite = { version = "1.13.0", default-features = false, optional = true }
btleplug = { version = "0.11.5", optional = true }
log = "0.4.22"
qrcode = "0.14.1"
image = { version = "0.24.7" }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
serde = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
jni = "0.19.0"
jni-utils = "0.1.1"
once_cell = "1.19.0"


[dev-dependencies]
pretty_env_logger = "0.4"

[features]
default = ["ble", "usb"]
ble = ["btleplug", "futures-lite"]
usb = ["rusb"]


[[example]]
name = "ble"
path = "examples/ble.rs"
required-features = ["ble"]
